fix: add gap

--- a/src/components/Pages/Profile/ui/MyPosts/AddPostForm/AddPostForm.module.scss
+++ b/src/components/Pages/Profile/ui/MyPosts/AddPostForm/AddPostForm.module.scss
@@ -1,8 +1,8 @@
 .formBox {
   display: flex;
-  //flex-direction: column;
+  gap: 10px;
   width: 100%;
-  padding: 10px;
+  padding-bottom: 10px;
   .field {
     width: 100%;
   }
